--- a/code/addlocation.html
+++ b/code/addlocation.html
@@ -40,7 +40,7 @@
                   <!-- Textfield: Location -->
                    
                     <form action="#">
-                      <div class="mdl-textfield mdl-js-textfield" id='locatio'>
+                      <div class="mdl-textfield mdl-js-textfield" id='location'>
                         <input class="mdl-textfield__input" type="text" id="location">
                         <label class="mdl-textfield__label" for="sample1">Insert Location</label>
                       </div>
